# Vakancies_parsing

./: README.md  pyproject.toml
data/: favorites_vacancies.json
data/downloaded_data/: loaded_vacancies.json
src/: abstract_class.py  hedhanters.py  main.py  reader.py  superjobs.py  vacancies.py  writer.py
