[tool.poetry]
name = "vakancies-parsing"
version = "0.1.0"
description = ""
authors = ["__Vitaliy__ <akkauntmoy124@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
pandas = "^2.1.4"
numpy = "^1.26.2"
openpyxl = "^3.1.2"
python-dotenv = "^1.0.0"


[tool.poetry.group.lint.dependencies]
black = "^23.12.1"
isort = "^5.13.2"
flake8 = "^6.1.0"
mypy = "^1.8.0"


[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'


[tool.black]
# Максимальная длина строки
line-length = 119


[tool.isort]
# максимальная длина строки
line_length = 119

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
